# epson_printer

./: collect_python.py  command41_6xxxx.c  command42_6xxxx.c  esp_log.txt  log2.txt  log_testprint.md  logconnect_to _realprinter.txt  logggg.txt  logwindow_printtest.txt  partitions.csv  received_data.c  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  cmd_not_found.c  command41.c  command42.c  define.h  epson_nv_memory.c  epson_nv_memory.h  escpos.c  escpos.h  main.c  my_file.c  my_file.h  my_gpio.c  my_gpio.h  my_timer.c  my_timer.h  my_uart.c  my_uart.h  my_wifi.c  tusb_serial_device_main.c
script/: esc_pos_decoder.py  test.py
